change buttons contrast for a11y see issue295 https://github.com/joomla/backend-template/issues/295

--- a/administrator/templates/atum/scss/blocks/_header.scss
+++ b/administrator/templates/atum/scss/blocks/_header.scss
@@ -109,7 +109,7 @@
           background-color: transparent;
           color: var(--atum-special-color);
           box-shadow: none;
-          opacity: $btn-disabled-opacity;
+          
         }
       }
       .dropdown-toggle {
