--- a/administrator/templates/atum/scss/blocks/_searchtools.scss
+++ b/administrator/templates/atum/scss/blocks/_searchtools.scss
@@ -82,6 +82,14 @@
         color: var(--atum-text-light);
         border:1px solid var(--border);
 		border-left: 0;
+		
+		&.disabled,
+		&:disabled{
+			background-color: rgba($gray-300, 0.8);
+			border-color: rgba($gray-500, 0.8);
+			opacity:1;
+			color:var(--atum-text-dark);
+		}
       }
 
       .form-control{
