--- a/administrator/templates/atum/scss/blocks/_toolbar.scss
+++ b/administrator/templates/atum/scss/blocks/_toolbar.scss
@@ -231,6 +231,11 @@ joomla-toolbar-button {
       }
 
     }
+	
+	&.disabled,
+	&:disabled{
+		opacity:1;
+	}
   }
 
   .dropdown-item {
